force-app/main/default/objects/New_Feature__c/New_Feature__c.object-meta.xml
<CustomObject>
    <description>Object to track and prioritize new features to be deployed</description>
    <label>New Feature</label>
    <nameField>
        <label>New Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>