force-app/main/default/objects/New_Feature__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <label>Business Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>