force-app/main/default/objects/New_Feature__c/fields/Feature_Area__c.field-meta.xml
<CustomField>
    <fullName>Feature_Area__c</fullName>
    <label>Feature Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts &amp; Contacts</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Tasks &amp; Activities</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>