force-app/main/default/objects/New_Feature__c/fields/Target_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Deployment_Date__c</fullName>
    <inlineHelpText>When will this feature be deployed?</inlineHelpText>
    <label>Target Deployment Date</label>
    <type>Date</type>
</CustomField>